--- a/whiteboard-app/views/index.ejs
+++ b/whiteboard-app/views/index.ejs
@@ -3,26 +3,32 @@
   <head>
     <title><%= title %></title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
     <script src="/javascripts/index.js"></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     <h1><%= title %></h1>
     <p>Welcome to my simple whiteboard. I used Node.js as the server, Express as the web framework and HTML5 Canvas for the whiteboard. My name is also <%= name %>.</p>
+    <div id="toolbar">
+    </div>
     <canvas id="canvas" width="500" height="500"></canvas>
 
-    <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
 
     <script>
-    //   var socket = io();
-    //   $('form').submit(function(){
-    //   socket.emit('chat message', $('#message').val());
-    //   $('#message').val('');
-    //   return false;
-    //   });
-    //   socket.on('chat message', function(message){
-    //     $('#messages').append($('<li>').text(message));
-    //   });
+      var socket = io.connect('http://localhost:3000');
+      socket.on('move'), function(data) {
+        console.log(data)
+      }
+      
+      $('canvas').submit(function(){
+      socket.emit('chat message', $('#message').val());
+      $('#message').val('');
+      return false;
+      });
+      socket.on('chat message', function(message){
+        $('#messages').append($('<li>').text(message));
+      });
     </script>
-  </body>	
+  </body>   
 </html>
