--- a/whiteboard-app/views/index.ejs
+++ b/whiteboard-app/views/index.ejs
@@ -3,7 +3,6 @@
   <head>
     <title><%= title %></title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
     <script src="/javascripts/index.js"></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
@@ -14,21 +13,28 @@
     </div>
     <canvas id="canvas" width="500" height="500"></canvas>
 
-
+    <output style="border: 2px red solid; width: 100px; height: 100px; display: block;"></output>
+    <div>
+      <label for="message">Messages:</label>
+      <input id="message" type="text"/>
+      <button id="button">Send</button>
+    </div>
     <script>
-      var socket = io.connect('http://localhost:3000');
-      socket.on('move'), function(data) {
-        console.log(data)
-      }
       
-      $('canvas').submit(function(){
-      socket.emit('chat message', $('#message').val());
-      $('#message').val('');
-      return false;
-      });
-      socket.on('chat message', function(message){
-        $('#messages').append($('<li>').text(message));
-      });
+
+      // socket.on('draw', function(data) {
+      //   console.log("data")
+      // });
+
+      // $('canvas').submit(function(){
+      // socket.emit('chat message', $('#message').val());
+      // $('#message').val('');
+      // return false;
+      // });
+      // socket.on('chat message', function(message){
+      //   $('#messages').append($('<li>').text(message));
+      // });
     </script>
+    <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
   </body>   
 </html>
