--- a/whiteboard-app/views/partials/chat.ejs
+++ b/whiteboard-app/views/partials/chat.ejs
@@ -1,7 +1,7 @@
 <div class="chatbox">
 	<p id="chatbox"></p>
 </div>
-<form class="input-box">
+<form class="send-chat">
 	<label for="message">Chat:</label>
 	<input id="message" type="text"/>
 	<button id="button">Send</button>
