--- a/whiteboard-app/public/stylesheets/style.css
+++ b/whiteboard-app/public/stylesheets/style.css
@@ -39,13 +39,18 @@ button {
 }
 
 .toolbar {
-	width: 20%;
-	height: 100px;
-	border: 2px solid black;
+	width: 500px;
+	height: 50px;
+	border: 1px solid #75E1CF;
 }
 
-#purple {
+.tool {
+	display: inline-block;
+	margin: 10px;
 	width: 30px; 
 	height: 30px;
-	background-color: #963C94;
+	text-align: center;
+	border: 1px dotted gray;
 }
+
+
