--- a/whiteboard-app/views/partials/canvas.ejs
+++ b/whiteboard-app/views/partials/canvas.ejs
@@ -1,4 +1,12 @@
 <canvas id="canvas" width="500" height="500"></canvas>
 <div class="toolbar">
-	<a href="#963C94"><div class="color" id="purple"></div></a>
+	<span class="tool color" id="purple" style="background-color: #963C94">+</span>
+	<span class="tool color" id="blue" style="background-color: #1E90FF">+</span>
+	<span class="tool color" id="green" style="background-color: #3CB371">+</span>
+	<span class="tool color" id="gold" style="background-color: #FFD700">+</span>
+	<span class="tool color" id="orange" style="background-color: #FFA500">+</span>
+	<span class="tool color" id="red" style="background-color: #B22222">+</span>
+	<span class="tool line-width" id="10">1</span>
+	<span class="tool line-width" id="20">2</span>
+	<span class="tool line-width" id="30">3</span>
 </div>
