--- a/whiteboard-app/views/index.ejs
+++ b/whiteboard-app/views/index.ejs
@@ -7,10 +7,11 @@
   <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
+<h1><%= title %></h1>
   <div class="container">
-    <h1><%= title %></h1>
     <p>
       Welcome. This whiteboard is real-time. I used Node.js as the server, Socket.io for real-time collaboration, Express as the web framework and HTML5 Canvas. It's so cool! 
+      I'm also trying to learn how to stream video across sockets, for not it's in the works but will crash my server if I let it run too long. 
     </p>
     <div class="username-container">
       <form class="username">
@@ -22,6 +23,7 @@
     </div>
     <% include partials/canvas %>
     <% include partials/chat %>
+    <% include partials/video %>
   </div>
   <h6>Daniela</h6>
   <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
