--- a/whiteboard-app/views/users/new.ejs
+++ b/whiteboard-app/views/users/new.ejs
@@ -1,5 +1,5 @@
 <h1><%= title %></h1>
-<form name="adduser" method="post" action="/adduser">
+<form name="adduser" method="post" action="/users/create">
   <input type=text name="username" placeholder="username">
   <input type=text name="email" placeholder="email">
   <button type="submit">Sign up</button>
