--- a/views/partials/canvas.ejs
+++ b/views/partials/canvas.ejs
@@ -1,5 +1,6 @@
-<canvas id="canvas" width="500" height="500"></canvas>
-<div class="toolbar">
+<div class="col span-6-t debug">
+	<canvas id="canvas" width="500" height="500"></canvas>
+	<div class="toolbar">
 	<span class="tool color" id="purple" style="background-color: #963C94">+</span>
 	<span class="tool color" id="blue" style="background-color: #1E90FF">+</span>
 	<span class="tool color" id="green" style="background-color: #3CB371">+</span>
@@ -9,4 +10,5 @@
 	<span class="tool line-width" id="10">1</span>
 	<span class="tool line-width" id="20">2</span>
 	<span class="tool line-width" id="30">3</span>
+	</div>
 </div>
