--- a/views/partials/chat.ejs
+++ b/views/partials/chat.ejs
@@ -1,3 +1,4 @@
+<div class="col span-6-t debug">
 <div class="chatbox">
 	<p id="chatbox"></p>
 </div>
@@ -6,4 +7,5 @@
 	<input id="message" type="text"/>
 	<button id="button">Send</button>
 </form>
+</div>
 </div>
