--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,18 +4,22 @@
   <title><%= title %></title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="/javascripts/index.js"></script>
+  <link rel='stylesheet' href='/stylesheets/trg.css' />
   <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
-
-<h1><%= title %></h1>
-  <div class="container">
+  <div class="container debug">
+    <h1><%= title %></h1>
     <p>
-      Welcome. This whiteboard is real-time. I used Node.js as the server, Socket.io for real-time collaboration, Express as the web framework and HTML5 Canvas. It's so cool!
-      I'm also trying to learn how to stream video across sockets, for not it's in the works but will crash my server if I let it run too long.
+      Welcome. This whiteboard is real-time. I used Node.js as the server, Socket.io for real-time collaboration, Express as the web framework and HTML5 Canvas for the whiteboard space. This can be a great space for drawing anything together, anytime. 
     </p>
-    <a href="/users/new">Sign up</a>
-    <div class="username-container">
+    <p>
+      This app was built to learn how to use new technologies. I am interested in creating collaborative spaces for foreign language instruction. There's so much potential in real-time collaboration to bring teachers and learners together to learn a new language! I hope to include video and voice sharing in the future, along with other collaborative tools. If you have any ideas about how to make this space great for language learners, check out the repo: <a target="_blank" href="https://github.com/daschi/whiteboard-app">Simple Whiteboard on Github</a>
+      <div class="debug">Built by daschi as a passion project for Dev Bootcamp</div>
+    </p>
+  </div>
+  <div class="debug">
+    <div class="row username-container">
       <form class="username">
         <p>Enter a username!</p>
         <label for="name">Name:</label>
@@ -25,9 +29,8 @@
     </div>
     <% include partials/canvas %>
     <% include partials/chat %>
-    <% include partials/video %>
   </div>
-  <h6>Daniela</h6>
+  
 <script src="https://cdn.socket.io/socket.io-1.3.5.js"></script>
 </body>
 </html>
